s3 storage backend; mypy; pytest; tox

--- a/python/Makefile
+++ b/python/Makefile
@@ -1,6 +1,16 @@
-
-
 .PHONY: format
 format:
 	black .
 
+.PHONY: test
+test:
+	tox
+
+.PHONY: lint
+lint:
+	mypy .
+	black --check .
+
+.PHONY: targets
+targets:
+	@$(MAKE) -pRrq -f $(lastword $(MAKEFILE_LIST)) : 2>/dev/null | awk -v RS= -F: '/^# File/,/^# Finished Make data base/ {if ($$1 !~ "^[#.]") {print $$1}}' | sort | egrep -v -e '^[^[:alnum:]]' -e '^$@$$'
