--- a/python/tox.ini
+++ b/python/tox.ini
@@ -3,7 +3,8 @@ envlist = py36,py37,py38
 
 [testenv]
 deps = .[test]
+passenv = AWS_*
 commands =
     mypy .
-    black --check
+    black --check .
     pytest tests
