python install notes

--- a/python/tox.ini
+++ b/python/tox.ini
@@ -1,10 +1,12 @@
 [tox]
-envlist = py36,py37,py38
+envlist = py36,py37,py38,py37-lint
 
 [testenv]
 deps = .[test]
 passenv = AWS_*
+commands = pytest {posargs}
+
+[testenv:lint]
 commands =
     mypy .
     black --check .
-    pytest tests
