--- a/.github/workflows/end-to-end-test.yaml
+++ b/.github/workflows/end-to-end-test.yaml
@@ -19,6 +19,9 @@ jobs:
         python: [3.6, 3.7, 3.8]
     steps:
     - uses: actions/checkout@master
+    - uses: actions/setup-go@v2
+      with:
+        go-version: 1.14
     - name: Setup Python
       uses: actions/setup-python@v2
       with:
