Run benchmarks 100 times instead of 100 seconds
100 seconds is a lot for fast benchmarks.

--- a/cli/Makefile
+++ b/cli/Makefile
@@ -64,7 +64,7 @@ test: check-fmt assets vet lint
 .PHONY: benchmark
 benchmark: install
 	# TODO: might be able to use the test binary instead of installing globally?
-	go test -bench=. -benchtime 100s ./benchmark
+	go test -bench=. -benchtime 100x ./benchmark
 
 
 .PHONY:
