--- a/.github/workflows/end-to-end-test.yaml
+++ b/.github/workflows/end-to-end-test.yaml
@@ -35,6 +35,11 @@ jobs:
       run: |
         echo "${{ secrets.SSH_PRIVATE_KEY }}" > /tmp/private_key.pem
         chmod 400 /tmp/private_key.pem
+    - name: Write GCP credentials
+      run: |
+        echo "${{ secrets.GCP_CREDENTIALS }}" > /tmp/gcp_credentials.json
+        chmod 400 /tmp/gcp_credentials.json
+        echo ::set-env name=GOOGLE_APPLICATION_CREDENTIALS::/tmp/gcp_credentials.json
     - name: Change /usr/local/bin permissions so we can install replicate in the test
       run: sudo chmod 777 /usr/local/bin
     - name: End-to-end Test
