--- a/.github/workflows/python-ci.yaml
+++ b/.github/workflows/python-ci.yaml
@@ -31,6 +31,11 @@ jobs:
         aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         aws-region: us-east-1
+    - name: Write GCP credentials
+      run: |
+        echo "${{ secrets.GCP_CREDENTIALS }}" > /tmp/gcp_credentials.json
+        chmod 400 /tmp/gcp_credentials.json
+        echo ::set-env name=GOOGLE_APPLICATION_CREDENTIALS::/tmp/gcp_credentials.json
     - name: Install tox
       run: pip install tox
     - name: "Lint and test"
