GCS storage backend (#27)
* GCS storage backend

* use setup-gcloud action

--- a/python/tox.ini
+++ b/python/tox.ini
@@ -3,7 +3,7 @@ envlist = py36,py37,py38,py37-lint
 
 [testenv]
 deps = .[test]
-passenv = AWS_*
+passenv = *
 commands = pytest {posargs}
 
 [testenv:lint]
