--- a/.github/workflows/end-to-end-test.yaml
+++ b/.github/workflows/end-to-end-test.yaml
@@ -35,6 +35,13 @@ jobs:
       run: |
         echo "${{ secrets.SSH_PRIVATE_KEY }}" > /tmp/private_key.pem
         chmod 400 /tmp/private_key.pem
+    - name: Setup GCP credentials
+      uses: GoogleCloudPlatform/github-actions/setup-gcloud@master
+      with:
+        version: '290.0.1'
+        project_id: ${{ secrets.GCP_PROJECT_ID }}
+        service_account_key: ${{ secrets.GCP_SA_KEY }}
+        export_default_credentials: true
     - name: Change /usr/local/bin permissions so we can install replicate in the test
       run: sudo chmod 777 /usr/local/bin
     - name: End-to-end Test
