--- a/.github/workflows/python-ci.yaml
+++ b/.github/workflows/python-ci.yaml
@@ -40,5 +40,5 @@ jobs:
         export_default_credentials: true
     - name: Install tox
       run: pip install tox
-    - name: "Lint and test"
-      run: tox -e py
+    - name: Lint and test
+      run: tox -e lint,py
