Disable S3 benchmark on CI
It's flakey and slow. We're only using it locally to test data
structures right now, so let's disable it on CI.

--- a/.github/workflows/benchmark.yaml
+++ b/.github/workflows/benchmark.yaml
@@ -25,7 +25,8 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: us-east-1
       - name: Run benchmark
-        run: make benchmark | tee output.txt
+        # FIXME (bfirsh): S3 benchmark disabled
+        run: make benchmark BENCH="BenchmarkReplicateListOnDisk" | tee output.txt
       # WIP attempt to make web page
       # - name: Store benchmark result
       #   # uses: rhysd/github-action-benchmark@v1
