--- a/.github/workflows/end-to-end-test.yaml
+++ b/.github/workflows/end-to-end-test.yaml
@@ -45,4 +45,4 @@ jobs:
     - name: Change /usr/local/bin permissions so we can install replicate in the test
       run: sudo chmod 777 /usr/local/bin
     - name: End-to-end Test
-      run: pytest -n4 -s --aws-access-key-id="${{ secrets.AWS_ACCESS_KEY_ID }}" --aws-secret-access-key="${{ secrets.AWS_SECRET_ACCESS_KEY }}" --ssh-private-key=/tmp/private_key.pem
+      run: pytest -s --aws-access-key-id="${{ secrets.AWS_ACCESS_KEY_ID }}" --aws-secret-access-key="${{ secrets.AWS_SECRET_ACCESS_KEY }}" --ssh-private-key=/tmp/private_key.pem
