--- a/.github/workflows/benchmark.yaml
+++ b/.github/workflows/benchmark.yaml
@@ -26,7 +26,7 @@ jobs:
           aws-region: us-east-1
       - name: Run benchmark
         # FIXME (bfirsh): S3 benchmark disabled
-        run: make benchmark BENCH="BenchmarkReplicateListOnDisk" | tee output.txt
+        run: make benchmark BENCH="Disk" | tee output.txt
       # WIP attempt to make web page
       # - name: Store benchmark result
       #   # uses: rhysd/github-action-benchmark@v1
