install_script clause in replicate.yaml

--- a/cli/raw-assets/Dockerfile
+++ b/cli/raw-assets/Dockerfile
@@ -5,7 +5,10 @@ ARG HAS_GPU
 ENV HAS_GPU=$HAS_GPU
 
 ENV DEBIAN_FRONTEND=noninteractive
-{{range $i, $install := .Install}}
+{{if .InstallScript}}
+COPY "{{.InstallScript}}" /tmp/install.sh
+RUN chmod +x /tmp/install.sh && /tmp/install.sh
+{{end}}{{range $i, $install := .Install}}
 RUN {{$install}}{{end}}
 {{if .HasPythonRequirements}}
 COPY "{{.PythonRequirements}}" /tmp/requirements.txt
