Better VSCode development environment
The Go language server is so much better and faster than the default
Go support. Weirdly it only works if the Go module is the root
folder, which can be fixed by making a "workspace" and adding
the Go modules as sub-projects.

https://github.com/microsoft/vscode-go/issues/2447

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,9 +1,6 @@
 {
-  "editor.formatOnSave": true,
-  "python.formatting.provider": "black",
-  "[javascript]": {
-    "editor.defaultFormatter": "esbenp.prettier-vscode"
-  },
-  "go.lintTool": "golangci-lint",
-  "python.linting.mypyEnabled": true
+  "files.exclude": {
+    "base-image-builder": true,
+    "cli": true
+  }
 }
