--- a/web/package.json
+++ b/web/package.json
@@ -13,6 +13,7 @@
     "@docusaurus/preset-classic": "^2.0.0-alpha.61",
     "classnames": "^2.2.6",
     "docusaurus-plugin-sass": "^0.1.9",
+    "raw-loader": "^4.0.1",
     "react": "^16.8.4",
     "react-dom": "^16.8.4"
   },
