Upload Python source in development
Makes end to end tests actually use the development Python version!

--- a/cli/raw-assets/Dockerfile
+++ b/cli/raw-assets/Dockerfile
@@ -14,5 +14,9 @@ RUN {{$install}}{{end}}
 COPY "{{.PythonRequirements}}" /tmp/requirements.txt
 RUN pip install -r /tmp/requirements.txt
 {{end}}
+{{ if .DevPythonSource}}
+COPY "{{.DevPythonSource}}" /tmp/dev-python-source
+RUN cd /tmp/dev-python-source && pip install -e .
+{{end}}
 COPY . /code
 WORKDIR /code
