Move .env to .env.local
Next needs .env

--- a/cli/Makefile
+++ b/cli/Makefile
@@ -23,11 +23,11 @@ export GO111MODULE = on
 # Local configuration
 # This exports all the local make variables, but I think that's fine?
 # https://stackoverflow.com/questions/44628206/how-to-load-and-export-variables-from-an-env-file-in-makefile
-include .env
+include .env.local
 export
 
-.env:
-	touch .env
+.env.local:
+	touch .env.local
 
 
 .PHONY: default
