--- a/.github/workflows/end-to-end-test.yaml
+++ b/.github/workflows/end-to-end-test.yaml
@@ -44,9 +44,10 @@ jobs:
           export_default_credentials: true
       - name: Change /usr/local/bin permissions so we can install replicate in the test
         run: sudo chmod 777 /usr/local/bin
+      # FIXME: should probably install wheel here
       - name: Install CLI and Python library
         run: |
-          cd ../cli && make install
-          cd ../python && pip install .
+          (cd ../ && make build)
+          pip install $(echo ../python/dist/replicate-*-py3-none-manylinux1_x86_64.whl)
       - name: End-to-end Test
         run: pytest -s --aws-access-key-id="${{ secrets.AWS_ACCESS_KEY_ID }}" --aws-secret-access-key="${{ secrets.AWS_SECRET_ACCESS_KEY }}" --ssh-private-key=/tmp/private_key.pem
