Make end-to-end tests a Python package
So we can import reusable bits

--- a/.github/workflows/end-to-end-test.yaml
+++ b/.github/workflows/end-to-end-test.yaml
@@ -13,7 +13,7 @@ jobs:
     defaults:
       run:
         shell: bash
-        working-directory: test-end2end
+        working-directory: end-to-end-test
     steps:
       - uses: actions/checkout@master
       - uses: actions/setup-go@v2
