--- a/python/requirements-test.txt
+++ b/python/requirements-test.txt
@@ -1,5 +1,7 @@
-moto==1.3.14
 mypy==0.782
 black==19.10b0
 pytest==5.4.3
 tensorflow==2.3.0
+# for integration tests
+boto3==1.12.32
+google-cloud-storage==1.31.0
