Use test requirements file and build wheels for tox
Tox gets very unhappy when things aren't in the source package,
and pip can't install .[test] if it requires files outside of
the source package.

--- a/python/tox.ini
+++ b/python/tox.ini
@@ -2,7 +2,8 @@
 envlist = py36,py37,py38,py37-lint
 
 [testenv]
-deps = .[test]
+wheel = true
+deps = -r requirements-test.txt
 passenv = *
 commands = pytest {posargs}
 
