--- a/python/Makefile
+++ b/python/Makefile
@@ -43,3 +43,8 @@ build: clean
 .PHONY: targets
 targets:
 	@$(MAKE) -pRrq -f $(lastword $(MAKEFILE_LIST)) : 2>/dev/null | awk -v RS= -F: '/^# File/,/^# Finished Make data base/ {if ($$1 !~ "^[#.]") {print $$1}}' | sort | egrep -v -e '^[^[:alnum:]]' -e '^$@$$'
+
+.PHONY: vendor
+vendor:
+	pip install vendoring
+	vendoring sync -v .
