Add us to website

--- a/web/package.json
+++ b/web/package.json
@@ -9,6 +9,9 @@
     "export": "next export"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.32",
+    "@fortawesome/free-brands-svg-icons": "^5.15.1",
+    "@fortawesome/react-fontawesome": "^0.1.11",
     "@mdx-js/loader": "^1.6.17",
     "@next/mdx": "^9.5.3",
     "@reach/tabs": "^0.11.2",
