Add top-level experiments object

--- a/.pylintrc
+++ b/.pylintrc
@@ -9,4 +9,4 @@ enable=W0614
 # can either give multiple identifier separated by comma (,) or put this option
 # multiple time (only on the command line, not in the configuration file where
 # it should appear only once).
-disable=fixme,C,redefined-outer-name
+disable=fixme,C,redefined-outer-name, protected-access
