--- a/python/pytest.ini
+++ b/python/pytest.ini
@@ -1,3 +1,5 @@
 [pytest]
 filterwarnings =
     ignore::DeprecationWarning
+markers =
+    external: Test against external services, like S3 and GCS
