--- a/python/tox.ini
+++ b/python/tox.ini
@@ -3,7 +3,7 @@ envlist = py36,py37,py38,py37-lint
 
 [testenv]
 wheel = true
-deps = -r requirements-test.txt
+deps = -r ../requirements-test.txt
 passenv = *
 commands = pytest {posargs}
 
