Make tests open source compatible

--- a/python/Makefile
+++ b/python/Makefile
@@ -6,8 +6,12 @@ fmt:
 	black .
 
 .PHONY: test
-test:
-	tox
+test: lint
+	pytest -m "not external"
+
+.PHONY: test-external
+test-external: lint
+	pytest
 
 .PHONY: lint
 lint:
